--- a/portfolio/src/styles/constants.scss
+++ b/portfolio/src/styles/constants.scss
@@ -17,7 +17,7 @@
     --text-with-bg-image: white;
     --header-color: black;
     --btn-color: black;
-    --btn-bg: white;
+    // --btn-bg: white;
   }
 }
 
