--- a/portfolio/src/templates/contacts.hbs
+++ b/portfolio/src/templates/contacts.hbs
@@ -5,13 +5,13 @@
         <h2 class="contacts__title" data-translate="contact-me">Contact me</h2>
         <form class="contacts__form contacts-form" action="#send">
           <div class="contacts-form__row">
-            <input name="email" type="email" placeholder="E-mail">
+            <input name="email" type="email" placeholder="E-mail" data-translate="e-mail">
           </div>
           <div class="contacts-form__row">
-            <input name="phone" type="tel" placeholder="Phone">
+            <input name="phone" type="tel" placeholder="Phone" data-translate="phone">
           </div>
           <div class="contacts-form__row">
-            <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+            <textarea name="message" cols="30" rows="10" placeholder="Message" data-translate="message"></textarea>
           </div>
           <div class="contacts-form__row">
             <button class="contacts-form__submit button button_filled" data-translate="send-message">
