--- a/portfolio/src/styles/video.scss
+++ b/portfolio/src/styles/video.scss
@@ -32,7 +32,7 @@
     svg {
       width: 100%;
       height: 100%;
-      fill: $text-color;
+      fill: $text-with-bg-image;
       transition: 0.2s ease-in;
       position: absolute;
       left: 3px;
