feat: add ripple effect on buttons

--- a/portfolio/src/templates/contacts.hbs
+++ b/portfolio/src/templates/contacts.hbs
@@ -14,7 +14,7 @@
             <textarea name="message" cols="30" rows="10" placeholder="Message" data-translate="message"></textarea>
           </div>
           <div class="contacts-form__row">
-            <button class="contacts-form__submit button button_filled" data-translate="send-message">
+            <button class="contacts-form__submit button button_filled button_ripple" data-translate="send-message">
               Send message
             </button>
           </div>
