--- a/portfolio/src/styles/general.scss
+++ b/portfolio/src/styles/general.scss
@@ -50,6 +50,8 @@ ul {
 }
 
 .button {
+  position: relative;
+  overflow: hidden;
   font-weight: normal;
   font-size: 20px;
   line-height: 40px;
@@ -92,6 +94,25 @@ ul {
     &:hover {
       // color: $text-color;
       background: $theme-color;
+    }
+  }
+
+  &_ripple {
+    .circle {
+      position: absolute;
+      background-color: #fff;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      transform: translate(-50%, -50%) scale(0);
+      animation: circleScale 0.4s ease-out;
+    }
+    
+    @keyframes circleScale {
+      to {
+        transform: translate(-50%, -50%) scale(3);
+        opacity: 0;
+      }
     }
   }
 }
