--- a/portfolio/src/templates/hero.hbs
+++ b/portfolio/src/templates/hero.hbs
@@ -5,7 +5,7 @@
       <p class="hero__text" data-translate="hero-text">
         Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise
       </p>
-      <button class="hero__button button button_filled" data-translate="hire">
+      <button class="hero__button button button_filled button_ripple" data-translate="hire">
         Hire me
       </button>
     </div>
