--- a/portfolio/src/styles/theme-switcher.scss
+++ b/portfolio/src/styles/theme-switcher.scss
@@ -3,7 +3,7 @@
   position: relative;
   font-weight: bold;
   font-size: 20px;
-  margin: 0 30px;
+  margin-left: 30px;
   width: 45px;
   height: 45px;
   color: $text-with-bg-image;
