feat: improve progress bar styling

--- a/custom-video/src/templates/player-controls.ejs
+++ b/custom-video/src/templates/player-controls.ejs
@@ -59,6 +59,7 @@
   <div class="player__progress-bar">
     <div class="player__progress-bar-time-label"></div>
     <div class="player__progress-bar-filler-wrapper">
+      <div class="player__progress-bar-thumb"></div>
       <div class="player__progress-bar-filler"></div>
     </div>
   </div>
