--- a/custom-video/src/styles/custom-video-player.scss
+++ b/custom-video/src/styles/custom-video-player.scss
@@ -3,8 +3,9 @@
   --player-popup-size: 150px;
   --player-control-panel-height: 45px;
   --player-control-panel-padding: 2px;
-  --player-progressbar-height: 6px;
-  --player-button-size: calc(var(--player-control-panel-height) - var(--player-progressbar-height));
+  --player-progressbar-height: 16px;
+  --player-progressbar-filler-height: 6px;
+  --player-button-size: calc(var(--player-control-panel-height) - var(--player-progressbar-filler-height));
   --player-volume-slider-width: 60px;
 }
 
@@ -29,7 +30,7 @@ video::-webkit-media-controls-enclosure {
 
   &:fullscreen {
     --player-control-panel-height: 65px;
-    --player-button-size: calc(var(--player-control-panel-height) - var(--player-progressbar-height));
+    --player-button-size: calc(var(--player-control-panel-height) - var(--player-progressbar-filler-height));
     --player-volume-slider-width: 90px;
   }
   
@@ -107,7 +108,7 @@ video::-webkit-media-controls-enclosure {
     background: var(--player-controls-bg-color);
     transition: transform 0.3s;
     z-index: 4;
-    padding-top: var(--player-progressbar-height);
+    padding-top: var(--player-progressbar-filler-height);
   
     &_show, &_mobile {
       transform: translateY(0px);
@@ -294,16 +295,21 @@ video::-webkit-media-controls-enclosure {
 
   &__progress-bar {
     position: absolute;
-    top: 0;
+    top: calc(-1 * (var(--player-progressbar-height) - var(--player-progressbar-filler-height)));
     width: 100%;
     height: var(--player-progressbar-height);
     cursor: pointer;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
   
     &:hover {
       .player__progress-bar-filler {
-        transform: scaleY(1.4);
+        transform: scaleY(1.1);
+      }
+
+      .player__progress-bar-thumb {
+        transform: scale(1);
+        box-shadow: 0px 0px 6px -2px black;
       }
     }
     
@@ -313,19 +319,35 @@ video::-webkit-media-controls-enclosure {
       width: 0;
       pointer-events: none;
       transform: scaleY(1);
+      transition: transform 0.2s ease;
     }
 
     &-filler-wrapper {
-      height: var(--player-progressbar-height);
+      height: var(--player-progressbar-filler-height);
       background-color: var(--player-filler-bg);
       width: 100%;
+      position: relative;
+    }
+
+    &-thumb {
+      position: absolute;
+      top: -50%;
+      left: 0;
+      z-index: 10;
+      background: var(--player-main-color);
+      width: calc(var(--player-progressbar-filler-height) * 2);
+      height: calc(var(--player-progressbar-filler-height) * 2);
+      border-radius: 50%;
+      pointer-events: none;
+      transform: scale(0);
+      transition: transform 0.2s ease;
     }
 
     &-time-label {
       position: absolute;
       left: 0;
       width: 30px;
-      top: -22px;
+      top: -16px;
       font-size: 0.9rem;
       text-shadow: 0px 0px 4px var(--player-dark-text-color);
       display: none;
