feat: minor style improvements

--- a/portfolio/src/index.hbs
+++ b/portfolio/src/index.hbs
@@ -25,5 +25,8 @@
     {{>'./templates/contacts'}}
   </main>
   {{>'./templates/footer'}}
+  <a class="top-button button_ripple" href="#top">
+    <i class="fas fa-arrow-up"></i>
+  </a>
 </body>
 </html>
