--- a/portfolio/src/styles/theme-switcher.scss
+++ b/portfolio/src/styles/theme-switcher.scss
@@ -76,8 +76,8 @@
   }
 }
 
-@media (max-width: 540px) {
+@media (max-width: 420px) {
   .theme-switcher {
-    margin: 0 15px;
+    margin-left: 15px;
   } 
 }
