--- a/portfolio/src/styles/mixins.scss
+++ b/portfolio/src/styles/mixins.scss
@@ -1,3 +1,3 @@
-@mixin anim($name, $fn: ease-in, $duration: 0.4s) {
+@mixin anim($name, $fn: ease, $duration: 0.4s) {
   animation: $name $duration $fn forwards;
 }
