feat: add poster to video

--- a/portfolio/src/templates/video.hbs
+++ b/portfolio/src/templates/video.hbs
@@ -11,7 +11,7 @@
           </svg>
         </button>
         <img class="video__player-img" src="../pictures/video/video-player.jpg" alt="video player placeholder"> --}}
-        <video class="video__player-img" src="../assets/video/video.mp4" controls></video>
+        <video class="video__player-img" src="../assets/video/video.mp4" poster="../pictures/video/video-player.jpg" controls></video>
       </div>
     </div>
   </div>
