--- a/custom-video/src/styles/custom-video-player.scss
+++ b/custom-video/src/styles/custom-video-player.scss
@@ -145,7 +145,6 @@ video::-webkit-media-controls-enclosure {
     border: none;
     background: none;
     font: inherit;
-  
     &:hover {
       color: var(--player-main-color);
     }
@@ -343,16 +342,32 @@ video::-webkit-media-controls-enclosure {
       transition: transform 0.2s ease;
     }
 
-    &-time-label {
+    &-tooltip {
       position: absolute;
       left: 0;
-      width: 30px;
-      top: -16px;
-      font-size: 0.9rem;
-      text-shadow: 0px 0px 4px var(--player-dark-text-color);
+      width: 100px;
+      height: 72px;
+      top: -72px;
       display: none;
       pointer-events: none;
       user-select: none;
+      background: transparent;
+
+      &-time {
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        text-shadow: 0px 0px 4px var(--player-dark-text-color);
+      }
+
+      &-bg {
+        width: 100%;
+        height: 56px;
+        border: 1px solid var(--player-main-text-color);
+        border-radius: 3px;
+        background-repeat: no-repeat;
+        margin-bottom: 5px;
+      }
     }
   }
 
@@ -372,7 +387,6 @@ video::-webkit-media-controls-enclosure {
     height: 50%;
     left: 0;
     top: calc(var(--player-button-size) / 4);
-    // color: var(--player-main-color);
     transition: color 0.2s ease;
 
     &:hover {
@@ -415,7 +429,7 @@ video::-webkit-media-controls-enclosure {
   &__volume-slider-filler {
     width: 0%;
     height: 100%;
-    background: var(--main-text-color);
+    background: var(--player-main-text-color);
     pointer-events: none;
     transition: background-color 0.2s ease;
   }
