--- a/custom-video/src/templates/player-controls.ejs
+++ b/custom-video/src/templates/player-controls.ejs
@@ -57,7 +57,10 @@
     </li>
   </ul>
   <div class="player__progress-bar">
-    <div class="player__progress-bar-time-label"></div>
+    <div class="player__progress-bar-tooltip">
+      <div class="player__progress-bar-tooltip-bg"></div>
+      <div class="player__progress-bar-tooltip-time"></div>
+    </div>
     <div class="player__progress-bar-filler-wrapper">
       <div class="player__progress-bar-thumb"></div>
       <div class="player__progress-bar-filler"></div>
